[metadata]
name = ngn-sensor-cache
description = NGN Sensor Cache
python_requires = >=3.8

[options]
packages = find:
install_requires =
    requests~=2.32
    redis~=5.2

[options.extras_require]
test =
    pytest
    pytest-cov

[tool:pytest]
pythonpath = ../src

[options.packages.find]
where = src
