[metadata]
name = ngn-sensor-publisher
description = NGN Sensor Publisher
python_requires = >=3.8

[options]
packages = find:
install_requires =
    confluent-kafka~=2.4
    websocket-client~=1.8

[options.extras_require]
test =
    pytest
    pytest-cov

[tool:pytest]
pythonpath = ../src

[options.packages.find]
where = src
